cloudformation/ebs/jenkins.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Create Jenkins VM",
    "Parameters": {
        "KeyPair": {
            "Description": "SSH key",
            "Type": "String"
        },
	"PubSub": {
	    "Description": "Public Subnet ID",
	    "Type": "String"
	},
	"VpcId": {
	    "Description": "VPC ID",
	    "Type": "String"
	},
        "Prefix": {
	    "Description": "Prefix name",
	    "Type": "String",
            "Default": "steve"
	}
    },
    "Resources": {
	"PubSecGrp": {
	    "Type": "AWS::EC2::SecurityGroup",
	    "Properties": {
	        "GroupDescription": "Public Network Firewall",
		"VpcId": { "Ref": "VpcId" },
	        "SecurityGroupIngress": [{
	            "IpProtocol": "tcp",
		    "FromPort": "22",
		    "ToPort": "22",
		    "CidrIp": "0.0.0.0/0"
	        },
	        {
	            "IpProtocol": "tcp",
		    "FromPort": "80",
		    "ToPort": "80",
		    "CidrIp": "0.0.0.0/0"
	        },
		{
	            "IpProtocol": "tcp",
		    "FromPort": "8080",
		    "ToPort": "8080",
		    "CidrIp": "0.0.0.0/0"
		}]
	    }
	},
        "Jenkins": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
                "ImageId": "ami-b968bad6",
                "InstanceType": "t2.micro",
                "KeyName": {
                    "Ref": "KeyPair"
                },
		"SubnetId": {"Ref": "PubSub"},
		"SecurityGroupIds": [{"Ref": "PubSecGrp"}],
		"UserData": { "Fn::Base64": {"Fn::Join": ["", [
		  "#cloud-boothook","\n",
		  "#!/bin/bash -xve","\n",
		  "/usr/bin/yum -y install https://pkg.jenkins.io/redhat/jenkins-2.9-1.1.noarch.rpm","\n",
		  "/sbin/service jenkins start","\n"
		]]}}
            }
        },
	"JenkinsDNS": {
		"Type": "AWS::Route53::RecordSet",
		"Properties": {
			"HostedZoneId": "Z2U00Q95U7EKEA",
			"Comment" : "DNS name for Steves Web Instance.",
			"Name": "stevejenkins.grads.al-labs.co.uk",
			"Type": "A",
			"TTL": "600",
			"ResourceRecords" : [
				{"Fn::GetAtt" : [ "Jenkins", "PublicIp" ] }
			]
		}
	}
    },
    "Outputs": {
        "JenkinsID": {
            "Description": "The ID of the Jankins",
            "Value": {
                "Ref": "Jenkins"
            }
        },
	"JenkinsIP": {
	    "Description": "IP of Jenkins",
	    "Value": {
		"Fn::GetAtt" : [ "Jenkins", "PublicIp" ]
	    }
	},
	"JenkinsName": {
	    "Description": "Jenkins DNS Name",
	    "Value": {
		"Ref": "JenkinsDNS"
	    }
	},
        "SecurityGroup": {
            "Description": "Security Group",
            "Value": {
                "Ref": "PubSecGrp"
            }
        }
    }
}
